[package]
name = "berasnap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
bytes = "1.7.2"
chrono = "0.4.38"
compose-rs = "0.0.3"
env_logger = "0.11.5"
log = "0.4.22"
lz4 = "1.28.0"
object_store = { version = "0.11.0" , features = ["gcp"] }
serde = "1.0.210"
serde_json = "1.0.128"
sha2 = "0.10.8"
structopt = "0.3.26"
tar = "0.4.42"
tokio = { version = "1.40.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
walkdir = "2.5.0"
