[package]
name = "bera-snap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
axum = "0.7.7"
bytes = "1.8.0"
chrono = "0.4.38"
compose-rs = "0.0.3"
env_logger = "0.11.5"
log = "0.4.22"
lz4 = "1.28.0"
object_store = { version = "0.11.1" , features = ["gcp"] }
serde = "1.0.213"
serde_json = "1.0.132"
sha2 = "0.10.8"
structopt = "0.3.26"
tar = "0.4.42"
tokio = { version = "1.41.0", features = ["full"] }
tokio-cron-scheduler = { version = "0.13.0", features = ["signal"] }
tokio-util = "0.7.12"
walkdir = "2.5.0"
tower-http = { version = "0.6.1", features = ["timeout", "trace", "fs"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
